<resources>
    <string name="app_name">paintu</string>
    <string name="tool">Tool</string>
    <string name="tool_point">Point</string>
    <string name="tool_line">Line</string>
    <string name="tool_path">Path</string>
    <string name="tool_fill">Fill</string>
    <string name="tool_eraser">Eraser</string>
    <string name="tool_circle">Circle</string>
    <string name="tool_rectangle">Rectangle</string>
    <string name="save">Save</string>
    <string name="tool_filters">Filters</string>
    <string name="pick_filter">Pick a Filter</string>
    <string-array name="filters_names">
        <item>Black and White</item>
        <item>Deep fry</item>
        <item>vintage</item>
    </string-array>
    <string name="undo">Undo</string>>
    <string name="clear">Clear screen</string>
    <string name="settings">Settings</string>
    <string name="colorblind_mode">Colorblind Mode</string>
    <string name="share">Share</string>

</resources>
