<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/bt_undo"
        android:title="@string/undo"
        android:icon="@drawable/bt_undo_selector"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bt_tools_chooser"
        android:title="@string/tool"
        android:icon="@drawable/ic_style_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save_btn"
        android:title="@string/save"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings_button"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clear_btn"
        android:title="@string/clear"
        android:icon="@drawable/ic_clear_black_24dp"
        app:showAsAction="never"/>

</menu>